- Appending selectboxClass to ul.items as well - Fixing overflow of display element for long value names

--- a/jquery.sb.css
+++ b/jquery.sb.css
@@ -12,6 +12,7 @@
   padding:0 24px 0 3px;
   position:relative;
   text-decoration:none;
+  overflow:hidden;
 }
 .selectbox.disabled .display{color:#999;}
 .selectbox.focused .display .text{background-color:#3399ff;color:#fcfcfc;}
